RESOLVED FIXED68505
[EFL] Fix alphabetical sorting problem
https://bugs.webkit.org/show_bug.cgi?id=68505
Summary [EFL] Fix alphabetical sorting problem
Gyuyoung Kim
Reported 2011-09-21 00:23:56 PDT
Fix wrong alphabetical sorting in ewk_util.cpp.
Attachments
Patch (1019 bytes, patch)
2011-09-21 00:45 PDT, Gyuyoung Kim
no flags
Patch (1.00 KB, patch)
2011-09-21 01:16 PDT, Gyuyoung Kim
no flags
Gyuyoung Kim
Comment 1 2011-09-21 00:45:30 PDT
Created attachment 108114 [details] Patch Fix below problem. Source/WebKit/efl/ewk/ewk_util.cpp:27: Alphabetical sorting problem. [build/include_order] [4]
Zoltan Horvath
Comment 2 2011-09-21 01:13:59 PDT
Comment on attachment 108114 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=108114&action=review > Source/WebKit/efl/ewk/ewk_util.cpp:28 > #include "workers/WorkerThread.h" > > -#include "ewk_private.h" > #include <eina_safety_checks.h> You don't need this blank line. Otherwise the change is okay, but I'm not a reviewer yet.
Gyuyoung Kim
Comment 3 2011-09-21 01:16:55 PDT
Created attachment 108119 [details] Patch Fixed.
WebKit Review Bot
Comment 4 2011-09-21 07:27:25 PDT
Comment on attachment 108119 [details] Patch Clearing flags on attachment: 108119 Committed r95627: <http://trac.webkit.org/changeset/95627>
WebKit Review Bot
Comment 5 2011-09-21 07:27:30 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.