[EFL] Fix alphabetical sorting problem https://bugs.webkit.org/show_bug.cgi?id=68505

Reviewed by Philippe Normand.

* ewk/ewk_util.cpp: Fix wrong alphabetical sorting problem.


Canonical link: https://commits.webkit.org/84472@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@95627 268f45cc-cd09-0410-ab3c-d52691b4dbfc